--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,24 +1,8 @@
-#loginPage .login-wrapper {
-  width: 600px;
-  margin: 50px auto 0;
-}
+.loginMargin{
 
-#loginPage .login-wrapper .signup-btn,
-#loginPage .login-wrapper .login-btn {
-  cursor: pointer;
-  width: 300px;
-  margin: 20px auto 0;
+  margin-top: 80px;
 }
+.email{
 
-#loginPage .login-wrapper .auth-error-msg {
-  margin-top: 20px;
-}
-
-#loginPage .home-title {
-  font-size: 40px;
-  margin-top: 100px;
-}
-
-#loginPage .input-group {
-  margin-bottom: 15px;
+  /* margin-left: 4px; */
 }
